api impl is now finished, tests to be written
