# documentation/api.yaml
@@ -201,8 +201,9 @@ paths:
       parameters:
       - name: "beaconId"
         in: "path"
-        description: "ID of a beacon"
+        description: "Beacon identifier"
         required: true
+        pattern: "\d+"
         type: "integer"
         format: "int32"
       responses:
@@ -212,6 +213,31 @@ paths:
             $ref: "#/definitions/Beacon"
         400:
           description: "Invalid beacon id"
+      security:
+      - api_key: []
+      
+  /beacon/{address}:
+    get:
+      tags:
+      - "beacon"
+      summary: "Return information about a single beacon"
+      description: "Used for discovery of BLE beacons in the vicinity of the user"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "address"
+        in: "path"
+        description: "Bluetooth address of a beacon"
+        required: true
+        pattern: "(?:[\\d\\w]{2}\\-){5}(?:[\\d\\w]{2})}"
+        type: "string"
+      responses:
+        200:
+          description: "Successful"
+          schema:
+            $ref: "#/definitions/Beacon"
+        400:
+          description: "Invalid beacon address"
       security:
       - api_key: []
 
@@ -399,6 +425,7 @@ definitions:
     type: "object"
     required:
       - "id"
+      - "treeId"
       - "bluetoothAddress"
     properties:
       id:
@@ -415,6 +442,9 @@ definitions:
     required:
       - "beaconId"
     properties:
+      id:
+        type: "integer"
+        format: "int32"
       beaconId:
         type: "integer"
         format: "int32"
